# pomodoro_bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .railwayignore  Dockerfile  README.md  entrypoint.sh  env.example  pyproject.toml
.github/workflows/: ci-cd.yml
app/: __init__.py  bot.py  config.py  main.py
app/db/: __init__.py  models.py
app/handlers/: __init__.py  command_handlers.py
app/services/: __init__.py  timer.py
docs/: implementation_plan.md  prd.md  railway_setup.md
rules/: file_structure_document.mdc  tech_stack_document.mdc
tests/: __init__.py  test_handlers.py
